2023-05-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/pic14/Makefile.in,
	  device/lib/pic14/aclocal.m4,
	  device/lib/pic14/configure,
	  device/lib/pic14/configure.ac,
	  device/lib/pic14/libc/Makefile.in,
	  device/lib/pic14/libm/Makefile.in,
	  device/lib/pic14/libsdcc/enhanced/Makefile.in,
	  device/lib/pic14/libsdcc/enhanced-no-xinst/Makefile.in,
	  device/lib/pic14/libsdcc/regular/Makefile.in,
	  device/lib/pic16/Makefile.in,
	  device/lib/pic16/aclocal.m4,
	  device/lib/pic16/configure,
	  device/lib/pic16/configure.ac,
	  device/lib/pic16/debug/Makefile.in,
	  device/lib/pic16/libc/Makefile.in,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/libm/Makefile.in,
	  device/lib/pic16/libsdcc/Makefile.in,
	  device/lib/pic16/startup/Makefile.in,
	  device/non-free/lib/pic14/configure,
	  device/non-free/lib/pic14/configure.ac,
	  device/non-free/lib/pic16/Makefile.in,
	  device/non-free/lib/pic16/aclocal.m4,
	  device/non-free/lib/pic16/configure,
	  device/non-free/lib/pic16/configure.ac,
	  device/non-free/lib/pic16/libdev/Makefile.in:
	  Updates to pic library build system, fix bug #3140 by implementing maintainer mode.

2023-05-25 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-2854.,
	  support/regression/tests/bug-3474.c,
	  support/regression/tests/strto.c:
	  Disable tests for mcs51 medium model that need too much memory since recent strotul fixes (see also RFE #875).

2023-05-24 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c,
	  support/regression/tests/bigstack.c.in:
	  Improve guards against a potential issue in the interaction of function entry stack adjustment and register parameters.
	* src/mos6502/gen.c:
	  Fix missing statement after label.

2023-05-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c:
	  Fix a segfault in a corner case in stm8 codegen.
	* device/lib/strtoul.c:
	  Improve strtoul range error check.